# taskbench

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Build-macos-cmake.yml  Build-win-msvc-cmake.yml  build-address-sanitizer.yml  build-linux-clang-cmake.yml  build-linux-gcc-cmake.yml  build-macos-cmake.yml  build-thread-sanitizer.yml  build-win-cygwin-cmake.yml  build-win-mingw-cmake.yml  build-win-msvc-cmake.yml  build-win-msys2-cmake.yml  format-check.yml
app/: CMakeLists.txt  main.cpp
include/taskbench/: benchmark.h  taskbench.h
include/taskbench/tasks/cpu/: aes.h  benchmark.h  compression.h  fft.h  mmul.h  sort.h  synthetic.h
include/taskbench/tasks/gpu/: benchmark.h  memory.h  mmul.h  synthetic.h
include/taskbench/tasks/ram/: benchmark.h  read.h  read_write.h  write.h
include/taskbench/utils/: benchmark.h  concepts.h  data_generator.h  format.h  statistics.h  timer.h
src/: CMakeLists.txt  benchmark.cpp  taskbench.cpp
src/tasks/: CMakeLists.txt
src/tasks/cpu/: CMakeLists.txt  aes.cpp  benchmark.cpp  compression.cpp  fft.cpp  mmul.cpp  sort.cpp  synthetic.cpp
src/tasks/disk/: CMakeLists.txt  read.cpp  write.cpp
src/tasks/gpu/: CMakeLists.txt  benchmark.cpp  memory.cpp  mmul.cpp  synthetic.cpp
src/tasks/network/: CMakeLists.txt  download.cpp  upload.cpp
src/tasks/ram/: CMakeLists.txt  benchmark.cpp  read.cpp  read_write.cpp  write.cpp
src/utils/: CMakeLists.txt  benchmark.cpp  data_generator.cpp  statistics.cpp  timer.cpp
